# aligned-hackathon-oct-2024

./: .gitignore  LICENSE  README.md
contract/: verifier.sol  verifier_v2.sol
game/godot/: catch-the-bug.gdextension  icon.svg.import  project.godot
game/godot/assets/bug/: bug_walking_down.png.import  bug_walking_down_px.png.import  walking_sideways.png.import  walking_up.png.import
game/godot/assets/leaderboard/: item.png.import  nickname_item.png.import  steps_item.png.import
game/godot/assets/tiles/: Tiles_DecorNoTrees.png.import  Tiles_DecorOak.png.import  Tiles_DecorPine.png.import  Tiles_FarmingBase.png.import  Tiles_FarmingCabbage.png.import  Tiles_FarmingPumpkins.png.import  Tiles_FarmingTomatos.png.import  Tiles_GrassBase1.png.import  Tiles_GrassBase2.png.import  Tiles_GrassBase3.png.import  Tiles_LakeBase.png.import  Tiles_LakeSidesFour.png.import  Tiles_LakeSidesOne.png.import  Tiles_LakeSidesThree.png.import  Tiles_LakeSidesTwo.png.import  Tiles_PathBranchCrossLeft.png.import  Tiles_PathBranchCrossRight.png.import  Tiles_PathCrosses.png.import  Tiles_PathEnd.png.import  Tiles_PathSmallCorner.png.import  Tiles_PathWideCorner.png.import  Tiles_PathsStraight.png.import
game/godot/assets/ui/: title.png.import  title_scaled.png.import  title_scaled_25.png.import  title_scaled_50.png.import  ui.png.import  (+1 more)
game/godot/scenes/: bug.tscn  level.tscn  level_1.tscn  main.tscn  map.tscn  tile_map.gd
game/godot/scripts/: level.gd  moving_direction.gd
game/godot/tilesets/: grass_tiles.tres
game/rust/: Cargo.toml
game/rust/src/: ethereum.rs  game.rs  lib.rs
game/rust/src/entities/: bug.rs
risc_zero/host/: Cargo.toml  bug_verification.json
risc_zero/host/src/: main.rs
risc_zero/methods/: Cargo.toml  build.rs
risc_zero/methods/guest/: Cargo.toml
risc_zero/methods/guest/src/: main.rs
risc_zero/methods/guest/src/shared/: bug.rs  game.rs  map.rs
risc_zero/methods/guest/src/shared/src/: bug.rs  game.rs  lib.rs  map.rs
shared/: bug.rs  game.rs  map.rs  position.rs
shared/src/: bug.rs  game.rs  lib.rs  map.rs  position.rs
(+199 files in other folders)
