[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
# risc0-zkvm = { version = "1.0.1" }
risc0-zkvm = { git = "https://github.com/risc0/risc0", tag = "v1.0.1", default-features = false, features = [
    "prove",
] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
# shared = { path = "../../shared" }
shared = { path = "../methods/guest/src/shared" }
hex = "0.4.3"
rpassword = "7.3.1"
ethers = { tag = "v2.0.15-fix-reconnections", features = [
    "ws",
    "rustls",
], git = "https://github.com/yetanotherco/ethers-rs.git" }
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
bincode = "1.3.3"
clap = { version = "4.5.8", features = ["derive"] }
anyhow = "1.0.86"
aligned-sdk = { git = "https://github.com/yetanotherco/aligned_layer", tag="v0.8.0" }
dialoguer = "0.11.0"
