[package]
name = "game_replay"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
# risc0-zkvm = { version = "1.0.1", default-features = false, features = ['std'] }
risc0-zkvm = { git = "https://github.com/risc0/risc0", tag = "v1.0.1", default-features = false, features = ['std'] }
serde = { version = "1.0.210", default-features = false }
serde_json = "1.0.128"
serde_derive = "1.0.210"
# shared = { path = "../../../shared" }
shared = { path = "./src/shared" }
